<resources>
    <string name="main_activity_name">AutoSound</string>
    <string name="add_trigger_activity_name">Add Trigger</string>
    <string name="action_settings">Settings</string>
    <string name="silent_switch_btn">Silent</string>
    <string name="mute_media_btn">Mute Media</string>
    <string name="set_trigger_btn_str">Set Trigger</string>
    <string name="cancel_trigger_btn_str">Cancel Trigger</string>
    <string name="update_trigger_btn_str">Update Trigger</string>
    <string name="repeat_switch_str">Repeat</string>
    <string name="sunday_checkbox_str">S</string>
    <string name="monday_checkbox_str">M</string>
    <string name="tuesday_checkbox_str">T</string>
    <string name="wednesday_checkbox_str">W</string>
    <string name="thursday_checkbox_str">T</string>
    <string name="friday_checkbox_str">F</string>
    <string name="saturday_checkbox_str">S</string>
    <string name="set_date_btn_str">Set Date</string>
    <string name="set_time_btn_str">Set Time</string>
    <string name="media_volume_txt_str">Media Volume</string>
    <string name="alarm_volume_txt_str">Alarm Volume</string>
    <string name="ringer_mode_txt_str">Ringer Mode</string>
    <string name="ringer_mode_spnr_hint">Ringer Mode</string>
    <string name="ringer_volume_txt_str">Ringer Volume</string>
    <string name="cancel_btn_str">Cancel</string>
    <string name="create_btn_str">Create</string>
    <string name="alarm_volume_txt">Alarm Volume</string>
    <string name="media_volume_txt">Media Volume</string>
    <string name="ringer_volume_txt">Ringer Volume</string>
    <string name="separator_txt_str"> .</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="main_tour_preference_key">com.betadevels.autosound.MAIN_TOUR_GUIDE</string>
    <string name="delete_tour_preference_key">com.betadevels.autosound.DELETE_TOUR_GUIDE</string>
    <string name="menu_action_delete_all_string">Delete All</string>
    <string name="menu_action_about_string">About</string>

    <string-array name="ringer_modes">
        <item>Normal</item>
        <item>Vibrate</item>
        <item>Silent</item>
    </string-array>

</resources>
