<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.betadevels.autosound.AddTriggerActivity"
    tools:showIn="@layout/activity_add_trigger"
    android:orientation="vertical"
    android:id="@+id/add_triger_root">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_switch_str"
            android:id="@+id/repeat_switch"/>

    </LinearLayout>

    <com.betadevels.autosound.layout.AutoSpaceFlowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/days_week_group">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/days_checkbox_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/sunday_checkbox_str" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/days_checkbox_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/monday_checkbox_str" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/days_checkbox_bg"
            android:gravity="center"
            android:button="@null"
            android:text="@string/tuesday_checkbox_str" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/days_checkbox_bg"
            android:gravity="center"
            android:button="@null"
            android:text="@string/wednesday_checkbox_str" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/days_checkbox_bg"
            android:gravity="center"
            android:button="@null"
            android:text="@string/thursday_checkbox_str" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/days_checkbox_bg"
            android:gravity="center"
            android:button="@null"
            android:text="@string/friday_checkbox_str" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/days_checkbox_bg"
            android:gravity="center"
            android:button="@null"
            android:text="@string/saturday_checkbox_str" />

    </com.betadevels.autosound.layout.AutoSpaceFlowLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_date_btn_str"
            android:id="@+id/set_date_btn"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_time_btn_str"
            android:id="@+id/set_time_btn"/>
    </LinearLayout>

</LinearLayout>