<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="3dp"
        card_view:cardCornerRadius="0dp"
        android:id="@+id/trigger_card_view"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@color/colorCardBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/trigger_card_header_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="New Text"
                    android:id="@+id/trigger_date_txt"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="New Text"
                    android:id="@+id/trigger_time_txt"
                    android:textSize="@dimen/bp_material_button_textsize"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/trigger_card_content_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trigger_card_header_layout"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ringer_volume_txt"
                    android:id="@+id/ringer_volume_tv"
                    android:layout_weight="1" />

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ringer_volume_pbar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/media_volume_txt"
                    android:id="@+id/media_volume_tv"
                    android:layout_weight="1" />

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/media_volume_pbar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/alarm_volume_txt"
                    android:id="@+id/alarm_volume_tv"
                    android:layout_weight="1" />

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/alarm_volume_pbar" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:id="@+id/cards_divider_view"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_gravity="bottom" />

    </android.support.v7.widget.CardView>

</LinearLayout>